--- a/fake.cabal
+++ b/fake.cabal
@@ -54,12 +54,12 @@ library
   other-modules:    Fake.Types
 
   build-depends:
-    base         >= 4.6 && < 4.16,
+    base         >= 4.6 && < 4.18,
     containers   >= 0.5 && < 0.7,
     generics-sop >= 0.2 && < 0.6,
     random       >= 1.1 && < 1.3,
-    text         >= 1.2 && < 1.3,
-    time         >= 1.4 && < 1.12
+    text         >= 2,
+    time
 
   ghc-options: -Wall
   hs-source-dirs:      src
@@ -79,8 +79,8 @@ test-suite spec
 
   build-depends:
     base,
-    hspec >= 2.4 && < 2.8,
-    lens >= 4.18.1 && < 5.1,
+    hspec,
+    lens,
     random,
     text,
     time
